[package]
name = "cloudflare-ddns"
version = "0.2.0"
authors = ["Colin Bruner <colin.d.bruner@gmail.com>"]
edition = "2018"

[dependencies]
config = "0.9"
ipify-async = "0.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "0.2", features = ["macros"] }
reqwest = { version = "0.10", features = ["json"] }
